kiralama list eklendi

--- a/src/app/List/list.component.html
+++ b/src/app/List/list.component.html
@@ -35,35 +35,184 @@
               <table class="table">
                 <thead>
                   <th class="kiralama-listele-table-head-text-first">Araç Bilgisi</th>
-                  <th class="kiralama-listele-table-head-text">Gidiş & Dönüş Bilgisi</th>
+                  <th class="kiralama-listele-table-head-text">Çıkış Bilgisi</th>
+                  <th class="kiralama-listele-table-head-text">Dönüş Bilgisi</th>
                   <th class="kiralama-listele-table-head-text-last" style="text-align: right">Bakiye</th>
                 </thead>
                 <tbody>
                 <tr>
-                  <td>
-                    <div class="kiralama-listele-table-left-block">
-                      <div class="kiralama-listele-table-left-icon-block">
-                        <i class="fa fa-car"></i>
-                      </div>
-                      <div class="kiralama-listele-table-left-arac-marka-adi">
-                        <span>Bmw 3 Serisi ( 35 D 8897 )</span>
-                      </div>
-                      <div class="kiralama-listele-table-left-musteri-adi">
+                  <td class="first-table-cell">
+                    <a href="#">
+                      <div class="kiralama-listele-table-left-block">
+                        <div class="kiralama-listele-table-left-icon-block">
+                          <i class="fa fa-car"></i>
+                        </div>
+                        <div class="kiralama-listele-table-left-arac-marka-adi">
+                          <span>Bmw 3 Serisi ( 35 D 8897 )</span>
+                        </div>
+                        <div class="kiralama-listele-table-left-musteri-adi">
                         <span>
                           Ahmet Elçik
                         </span>
+                        </div>
                       </div>
-                    </div>
+                    </a>
                   </td>
                   <td>
-                    <div class="kiralama-listele-table-middle-block">
-
-                    </div>
+                    <a href="#">
+                      <div class="kiralama-listele-table-middle-block">
+                        <div class="kiralama-listele-table-middle-cikis-tarihi-block">
+                          <span><i class="fa fa-sign-in fa-rotate-270"></i> 05 Mart 2017 11:35</span>
+                        </div>
+                        <div class="kiralama-listele-table-middle-cikis-sube">
+                          <span><i class="fa fa-map-marker"></i> Denizli Merkez</span>
+                        </div>
+                      </div>
+                    </a>
                   </td>
                   <td>
-                    <div class="kiralama-listele-table-right-block">
-
-                    </div>
+                    <a href="#">
+                      <div class="kiralama-listele-table-middle-block">
+                        <div class="kiralama-listele-table-middle-cikis-tarihi-block">
+                          <span><i class="fa fa-sign-in fa-rotate-90"></i> 06 Mart 2017 11:35</span>
+                          <span class="kiralama-listele-donus-tarihi-gun-sayisi">( <i class="fa fa-bell"></i> 10 saat sonra )</span>
+                        </div>
+                        <div class="kiralama-listele-table-middle-cikis-sube">
+                          <span><i class="fa fa-map-marker"></i> Denizli Merkez</span>
+                        </div>
+                      </div>
+                    </a>
+                  </td>
+                  <td class="last-table-cell">
+                    <a href="#">
+                      <div class="kiralama-listele-table-right-block">
+                        <div class="kiralama-listele-table-right-kalan-meblag-block">
+                          <span>Kalan Meblağ : 25,00 <i class="fa fa-try"></i></span>
+                        </div>
+                        <div class="kiralama-listele-table-right-genel-toplam-block">
+                          <span>Genel Toplam : 100,00 <i class="fa fa-try"></i></span>
+                        </div>
+                        <div class="kiralama-listele-table-right-odeme-durumu-block">
+                          <span><i class="fa fa-minus"></i> ÖDENECEK</span>
+                        </div>
+                      </div>
+                    </a>
+                  </td>
+                </tr>
+                <tr>
+                  <td class="first-table-cell">
+                    <a href="#">
+                      <div class="kiralama-listele-table-left-block">
+                        <div class="kiralama-listele-table-left-icon-block">
+                          <i class="fa fa-car"></i>
+                        </div>
+                        <div class="kiralama-listele-table-left-arac-marka-adi">
+                          <span>Bmw 3 Serisi ( 35 D 8897 )</span>
+                        </div>
+                        <div class="kiralama-listele-table-left-musteri-adi">
+                        <span>
+                          Ahmet Elçik
+                        </span>
+                        </div>
+                      </div>
+                    </a>
+                  </td>
+                  <td>
+                    <a href="#">
+                      <div class="kiralama-listele-table-middle-block">
+                        <div class="kiralama-listele-table-middle-cikis-tarihi-block">
+                          <span><i class="fa fa-sign-in fa-rotate-270"></i> 05 Mart 2017 11:35</span>
+                        </div>
+                        <div class="kiralama-listele-table-middle-cikis-sube">
+                          <span><i class="fa fa-map-marker"></i> Denizli Merkez</span>
+                        </div>
+                      </div>
+                    </a>
+                  </td>
+                  <td>
+                    <a href="#">
+                      <div class="kiralama-listele-table-middle-block">
+                        <div class="kiralama-listele-table-middle-cikis-tarihi-block">
+                          <span><i class="fa fa-sign-in fa-rotate-90"></i> 06 Mart 2017 11:35</span>
+                        </div>
+                        <div class="kiralama-listele-table-middle-cikis-sube">
+                          <span><i class="fa fa-map-marker"></i> Denizli Merkez</span>
+                        </div>
+                      </div>
+                    </a>
+                  </td>
+                  <td class="last-table-cell">
+                    <a href="#">
+                      <div class="kiralama-listele-table-right-block">
+                        <div class="kiralama-listele-table-right-kalan-meblag-block">
+                          <span>Kalan Meblağ : 25,00 <i class="fa fa-try"></i></span>
+                        </div>
+                        <div class="kiralama-listele-table-right-genel-toplam-block">
+                          <span>Genel Toplam : 100,00 <i class="fa fa-try"></i></span>
+                        </div>
+                        <div class="kiralama-listele-table-right-odeme-durumu-block">
+                          <span><i class="fa fa-minus"></i> ÖDENECEK</span>
+                        </div>
+                      </div>
+                    </a>
+                  </td>
+                </tr>
+                <tr>
+                  <td class="first-table-cell">
+                    <a href="#">
+                      <div class="kiralama-listele-table-left-block">
+                        <div class="kiralama-listele-table-left-icon-block">
+                          <i class="fa fa-car"></i>
+                        </div>
+                        <div class="kiralama-listele-table-left-arac-marka-adi">
+                          <span>Bmw 3 Serisi ( 35 D 8897 )</span>
+                        </div>
+                        <div class="kiralama-listele-table-left-musteri-adi">
+                        <span>
+                          Ahmet Elçik
+                        </span>
+                        </div>
+                      </div>
+                    </a>
+                  </td>
+                  <td>
+                    <a href="#">
+                      <div class="kiralama-listele-table-middle-block">
+                        <div class="kiralama-listele-table-middle-cikis-tarihi-block">
+                          <span><i class="fa fa-sign-in fa-rotate-270"></i> 05 Mart 2017 11:35</span>
+                        </div>
+                        <div class="kiralama-listele-table-middle-cikis-sube">
+                          <span><i class="fa fa-map-marker"></i> Denizli Merkez</span>
+                        </div>
+                      </div>
+                    </a>
+                  </td>
+                  <td>
+                    <a href="#">
+                      <div class="kiralama-listele-table-middle-block">
+                        <div class="kiralama-listele-table-middle-cikis-tarihi-block">
+                          <span><i class="fa fa-sign-in fa-rotate-90"></i> 06 Mart 2017 11:35</span>
+                        </div>
+                        <div class="kiralama-listele-table-middle-cikis-sube">
+                          <span><i class="fa fa-map-marker"></i> Denizli Merkez</span>
+                        </div>
+                      </div>
+                    </a>
+                  </td>
+                  <td class="last-table-cell">
+                    <a href="#">
+                      <div class="kiralama-listele-table-right-block">
+                        <div class="kiralama-listele-table-right-kalan-meblag-block">
+                          <span>Kalan Meblağ : 25,00 <i class="fa fa-try"></i></span>
+                        </div>
+                        <div class="kiralama-listele-table-right-genel-toplam-block">
+                          <span>Genel Toplam : 100,00 <i class="fa fa-try"></i></span>
+                        </div>
+                        <div class="kiralama-listele-table-right-odeme-durumu-block">
+                          <span><i class="fa fa-minus"></i> ÖDENECEK</span>
+                        </div>
+                      </div>
+                    </a>
                   </td>
                 </tr>
                 </tbody>
