--- a/src/scss/List/kiralama-listele.scss
+++ b/src/scss/List/kiralama-listele.scss
@@ -96,8 +96,7 @@
   }
 
   & .kiralama-listele-table-right-block{
-    float: right;
-    padding-right: 15px;
+    float: right
   }
 
   .kiralama-listele-table-right-kalan-meblag-block{
