edit kiralama listele

--- a/src/app/List/list.component.html
+++ b/src/app/List/list.component.html
@@ -59,7 +59,7 @@
                       </div>
                     </a>
                   </td>
-                  <td>
+                  <td style="min-width: 170px">
                     <a href="#">
                       <div class="kiralama-listele-table-middle-block">
                         <div class="kiralama-listele-table-middle-cikis-tarihi-block">
@@ -71,14 +71,14 @@
                       </div>
                     </a>
                   </td>
-                  <td>
+                  <td style="min-width: 260px">
                     <a href="#">
                       <div class="kiralama-listele-table-middle-block">
-                        <div class="kiralama-listele-table-middle-cikis-tarihi-block">
+                        <div class="kiralama-listele-table-middle-donus-tarihi-block">
                           <span><i class="fa fa-sign-in fa-rotate-90"></i> 06 Mart 2017 11:35</span>
                           <span class="kiralama-listele-donus-tarihi-gun-sayisi">( <i class="fa fa-bell"></i> 10 saat sonra )</span>
                         </div>
-                        <div class="kiralama-listele-table-middle-cikis-sube">
+                        <div class="kiralama-listele-table-middle-donus-sube">
                           <span><i class="fa fa-map-marker"></i> Denizli Merkez</span>
                         </div>
                       </div>
