link css eklendi

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,6 +11,8 @@
 @import "scss/font-size";
 @import "app/musteri-detay/musteri-detay.component.scss";
 
+/* Link */
+@import "scss/Link/link.scss";
 /* Panel */
 @import "scss/Panel/Panel.scss";
 /* Button */
