link blue hover eklendi

--- a/src/app/Panel/panel.component.html
+++ b/src/app/Panel/panel.component.html
@@ -49,7 +49,7 @@
         <div class="panel-footer">
           <!-- Panel Footer Left Block -->
           <div class="panel-footer-left-block">
-            <span>Ekleyen Kullanıcı : <a href="#">Ahmet Elçik</a></span>
+            <span>Ekleyen Kullanıcı : <a href="#" class="link-blue-hover">Ahmet Elçik</a></span>
           </div>
           <!-- Panel Footer Left Block -->
           <!-- Panel Footer Right Block -->
