--- a/src/app/Panel/panel.component.html
+++ b/src/app/Panel/panel.component.html
@@ -46,7 +46,7 @@
             <!-- Diğer Button DropDown -->
             <!-- Ödeme Ekle -->
             <div class="col-md-6">
-              <a href="#" class="btn btn-success-ozel btn-block"><i class="fa fa-plus"></i> Avans Ekle</a>
+              <a href="#" class="btn btn-success-ozel btn-block" id="ckicked"><i class="fa fa-plus"></i> Avans Ekle</a>
             </div>
             <!-- Ödeme Ekle -->
           </div>
