--- a/src/app/Panel/panel.component.html
+++ b/src/app/Panel/panel.component.html
@@ -36,7 +36,7 @@
               <div class="btn-group btn-block" dropdown>
                 <button class="btn btn-default-ozel btn-block" dropdownToggle>DİĞER <span class="caret"></span></button>
                 <ul dropdownMenu role="menu" aria-labelledby="single-button" class="btn-block">
-                  <li role="menuitem"><a class="dropdown-item" href="#">Yeni Maaş / Prim</a></li>
+                  <li role="menuitem"><a class="dropdown-item" href="#">Yeni Maaş / Psrim</a></li>
                   <li class="divider dropdown-divider"></li>
                   <li role="menuitem"><a class="dropdown-item" href="#"><i class="fa fa-edit"></i> <span>Düzenle</span></a></li>
                   <li role="menuitem"><a class="dropdown-item" href="#"><i class="fa fa-trash-o"></i> <span>Sil</span></a></li>
