--- a/src/app/Panel/panel.component.html
+++ b/src/app/Panel/panel.component.html
@@ -33,10 +33,21 @@
         <!-- Panel Body -->
         <div class="panel-body">
           <div class="row">
-            <!-- Diğer Button DropDown -->
-            <div class="col-md-6">
+            <div class="col-md-12">
               <div class="btn-group btn-block" dropdown>
-                <button class="btn btn-default-ozel btn-block" dropdownToggle>DİĞER <span class="caret"></span></button>
+                <button class="btn btn-default-ozel btn-block" dropdownToggle> PARA GİRİŞ & ÇIKIŞI EKLE <span class="caret"></span></button>
+                <ul dropdownMenu role="menu" aria-labelledby="single-button" class="btn-block">
+                  <li role="menuitem"><a class="dropdown-item" href="#"><i class="fa fa-sign-in fa-rotate-90"></i> <span> Para Girişi Ekle</span></a></li>
+                  <li role="menuitem"><a class="dropdown-item" href="#"><i class="fa fa-sign-in fa-rotate-270"></i> <span> Para Çıkışı Ekle </span></a></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="col-md-12 m-t-5">
+              <div class="btn-group btn-block" dropdown>
+                <button class="btn btn-default-ozel btn-block" dropdownToggle> HESAP İŞLEMLERİ <span class="caret"></span></button>
                 <ul dropdownMenu role="menu" aria-labelledby="single-button" class="btn-block">
                   <li role="menuitem"><a class="dropdown-item" href="#">Yeni Maaş / Prim</a></li>
                   <li class="divider dropdown-divider"></li>
@@ -45,13 +56,8 @@
                 </ul>
               </div>
             </div>
-            <!-- Diğer Button DropDown -->
-            <!-- Ödeme Ekle -->
-            <div class="col-md-6">
-              <a href="#" class="btn btn-success-ozel btn-block"><i class="fa fa-plus"></i> Avans Ekle</a>
-            </div>
-            <!-- Ödeme Ekle -->
           </div>
+
           <div class="row">
             <div class="col-md-12">
               <div class="calisan-detay-kalan-bakiye-block">
