--- a/src/app/Panel/panel.component.html
+++ b/src/app/Panel/panel.component.html
@@ -133,6 +133,63 @@
       <!-- Panel -->
     </div>
     <!-- Çalışan Detay -->
+
+    <!-- Çalışan Detay -->
+    <div class="col-md-4" id="gider-detay-right-panel">
+      <!-- Panel -->
+      <div class="panel panel-light">
+        <!-- Panel Body -->
+        <div class="panel-body">
+          <div class="row">
+            <!-- Diğer Button DropDown -->
+            <div class="col-md-6">
+              <div class="btn-group btn-block" dropdown>
+                <button class="btn btn-default-ozel btn-block" dropdownToggle>DİĞER <span class="caret"></span></button>
+                <ul dropdownMenu role="menu" aria-labelledby="single-button" class="btn-block">
+                  <li role="menuitem"><a class="dropdown-item" href="#">Yeni Maaş / Prim</a></li>
+                  <li class="divider dropdown-divider"></li>
+                  <li role="menuitem"><a class="dropdown-item" href="#"><i class="fa fa-edit"></i> <span>Düzenle</span></a></li>
+                  <li role="menuitem"><a class="dropdown-item" href="#"><i class="fa fa-trash-o"></i> <span>Sil</span></a></li>
+                </ul>
+              </div>
+            </div>
+            <!-- Diğer Button DropDown -->
+            <!-- Ödeme Ekle -->
+            <div class="col-md-6">
+              <a href="#" class="btn btn-success-ozel btn-block"><i class="fa fa-sign-in fa-rotate-90"></i> Ödeme Ekle</a>
+            </div>
+            <!-- Ödeme Ekle -->
+          </div>
+          <div class="row">
+            <div class="col-md-12">
+              <div class="calisan-detay-kalan-bakiye-block">
+                <div class="calisan-detay-kalan-bakiye-text-block">
+                  <span class="calisan-detay-kalan-title-text">KALAN</span>
+                  <span class="calisan-detay-kalan-bakiye-text">1.500,00 <i class="fa fa-try"></i></span>
+                </div>
+                <div class="progress" style="margin-bottom: 0;margin-top: 2px;">
+                  <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- Panel Body -->
+        <!-- Panel Footer -->
+        <div class="panel-footer">
+          <div class="calisan-right-islem-detay-footer-block">
+            <div class="calisan-right-islem-detay-footer-text-block">
+              <span class="calisan-right-footer-title-text">TOPLAM</span>
+              <span class="calisan-right-footer-content-text pull-right">2500,00 <i class="fa fa-try"></i></span>
+            </div>
+          </div>
+        </div>
+        <!-- Panel Footer -->
+      </div>
+      <!-- Panel -->
+    </div>
+    <!-- Çalışan Detay -->
   </div>
   <!-- Müşteri Sağ Block -->
 
