müşteri listelem yapildi

--- a/src/app/musteriler/musteriler.component.html
+++ b/src/app/musteriler/musteriler.component.html
@@ -21,109 +21,103 @@
 
 
 <div class="container-fluid m-l-230 m-t-15">
+  <!-- Müşteri Listele Table -->
   <div class="row">
-    <div class="col-md-12">
-      <!-- Müşteri Listele -->
-      <div id="musteri-listele-body">
-        <!-- Müşteri Listele Header -->
-        <div id="musteri-listele-header">
-          <div class="musteri-title-baslik pull-left">
-            <span>Adi / Şirket</span>
+    <div class="col-xs-12">
+      <!-- Panel -->
+      <div class="panel panel-light" style="border-radius: 5px">
+        <!-- Panel Body -->
+        <div class="panel-body" style="padding: 0;">
+          <div id="musteri-listele-body-table">
+            <div class="table-responsive">
+
+              <table class="table">
+                <thead>
+                <th class="musteri-listele-table-head-text-first" style="padding-left: 20px;padding-bottom: 20px;padding-top: 20px">Adi</th>
+                <th class="musteri-listele-table-head-text-last" style="padding-right: 20px;padding-bottom: 20px;padding-top: 20px;text-align:right"> <i class="fa fa-sort-numeric-desc"></i> Bakiye</th>
+                </thead>
+                <tbody>
+                <tr>
+                  <td class="first-table-cell">
+                    <a href="#">
+                      <div class="musteri-listele-table-left-block">
+                        <div class="musteri-listele-table-left-kisa-ad-block">
+                          <span>AE</span>
+                        </div>
+                        <div class="musteri-listele-table-left-tam-adi">
+                          <span>Ahmet Elçik</span>
+                          <span class="musteri-listele-table-left-telefon-no">(554) 910 98 94</span>
+                        </div>
+                      </div>
+                    </a>
+                  </td>
+                  <td style="text-align: right" class="last-table-cell">
+                    <a href="#">
+                      <div class="musteri-listele-table-right-block">
+                        <div class="musteri-listele-table-right-bakiye-text">
+                          <span>250,00 <i class="fa fa-try"></i></span>
+                        </div>
+                      </div>
+                    </a>
+                  </td>
+                </tr>
+                <tr>
+                  <td class="first-table-cell">
+                    <a href="#">
+                      <div class="musteri-listele-table-left-block">
+                        <div class="musteri-listele-table-left-kisa-ad-block">
+                          <span>AE</span>
+                        </div>
+                        <div class="musteri-listele-table-left-tam-adi">
+                          <span>Ahmet Elçik</span>
+                          <span class="musteri-listele-table-left-telefon-no">(554) 910 98 94</span>
+                        </div>
+                      </div>
+                    </a>
+                  </td>
+                  <td style="text-align: right" class="last-table-cell">
+                    <a href="#">
+                      <div class="musteri-listele-table-right-block">
+                        <div class="musteri-listele-table-right-bakiye-text">
+                          <span>250,00 <i class="fa fa-try"></i></span>
+                        </div>
+                      </div>
+                    </a>
+                  </td>
+                </tr>
+                <tr>
+                  <td class="first-table-cell">
+                    <a href="#">
+                      <div class="musteri-listele-table-left-block">
+                        <div class="musteri-listele-table-left-kisa-ad-block">
+                          <span>AE</span>
+                        </div>
+                        <div class="musteri-listele-table-left-tam-adi">
+                          <span>Ahmet Elçik</span>
+                          <span class="musteri-listele-table-left-telefon-no">(554) 910 98 94</span>
+                        </div>
+                      </div>
+                    </a>
+                  </td>
+                  <td style="text-align: right" class="last-table-cell">
+                    <a href="#">
+                      <div class="musteri-listele-table-right-block">
+                        <div class="musteri-listele-table-right-bakiye-text">
+                          <span>250,00 <i class="fa fa-try"></i></span>
+                        </div>
+                      </div>
+                    </a>
+                  </td>
+                </tr>
+                </tbody>
+              </table>
+            </div>
           </div>
-          <div class="musteri-title-baslik pull-right">
-            <span><i class="fa fa-sort-numeric-desc"></i> Bakiye</span>
-          </div>
-          <div class="clearfix"></div>
         </div>
-        <!-- Müşteri Listele Header -->
-        <!-- Müşteri Listele Body -->
-        <div id="musteri-listele-list-body">
-        <ul class="musteri-list-ul padding-0">
-          <li>
-            <a routerLink="/musteri/5/detay">
-              <div class="musteri-listele-kisa-ad img-circle">
-                <span>AE</span>
-              </div>
-              <div class="musteri-listele-adi-soyadi">
-                <span>Ahmet Elçik</span>
-              </div>
-              <div class="musteri-listele-etiket-tags">
-                <span class="musteri-etiket-tags-red">Bireysel</span>
-              </div>
-              <div class="musteri-listele-bakiyesi">
-                <span>10,00 <i class="fa fa-try"></i></span>
-              </div>
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <div class="musteri-listele-kisa-ad img-circle">
-                <span>AE</span>
-              </div>
-              <div class="musteri-listele-adi-soyadi">
-                <span>Ahmet Elçik</span>
-              </div>
-              <div class="musteri-listele-etiket-tags">
-                <span class="musteri-etiket-tags-green">Kurumsal</span>
-              </div>
-              <div class="musteri-listele-bakiyesi">
-                <span>10,00 <i class="fa fa-try"></i></span>
-              </div>
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <div class="musteri-listele-kisa-ad img-circle">
-                <span>AE</span>
-              </div>
-              <div class="musteri-listele-adi-soyadi">
-                <span>Ahmet Elçik</span>
-              </div>
-              <div class="musteri-listele-etiket-tags">
-                <span class="musteri-etiket-tags-green">Kurumsal</span>
-              </div>
-              <div class="musteri-listele-bakiyesi">
-                <span>10,00 <i class="fa fa-try"></i></span>
-              </div>
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <div class="musteri-listele-kisa-ad img-circle">
-                <span>AE</span>
-              </div>
-              <div class="musteri-listele-adi-soyadi">
-                <span>Ahmet Elçik</span>
-              </div>
-              <div class="musteri-listele-etiket-tags">
-                <span class="musteri-etiket-tags-green">Kurumsal</span>
-              </div>
-              <div class="musteri-listele-bakiyesi">
-                <span>10,00 <i class="fa fa-try"></i></span>
-              </div>
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <div class="musteri-listele-kisa-ad img-circle">
-                <span>AE</span>
-              </div>
-              <div class="musteri-listele-adi-soyadi">
-                <span>Ahmet Elçik</span>
-              </div>
-              <div class="musteri-listele-etiket-tags">
-                <span class="musteri-etiket-tags-green">Kurumsal</span>
-              </div>
-              <div class="musteri-listele-bakiyesi">
-                <span>10,00 <i class="fa fa-try"></i></span>
-              </div>
-            </a>
-          </li>
-        </ul>
-        </div>
-        <!-- Müşteri Listele Body -->
+        <!-- Panel Body -->
       </div>
-      <!-- Müşteri Listele -->
+      <!-- Panel -->
     </div>
   </div>
+  <!-- Müşteri Listele Table -->
 </div>
