gereksiz satırlar silnidi

--- a/src/app/musteriler/musteriler.component.html
+++ b/src/app/musteriler/musteriler.component.html
@@ -39,7 +39,7 @@
                 <tbody>
                 <tr>
                   <td class="first-table-cell">
-                    <a href="#">
+                    <a routerLink="/musteri/5/detay">
                       <div class="musteri-listele-table-left-block">
                         <div class="musteri-listele-table-left-kisa-ad-block">
                           <span>AE</span>
@@ -52,7 +52,7 @@
                     </a>
                   </td>
                   <td style="text-align: right" class="last-table-cell">
-                    <a href="#">
+                    <a routerLink="/musteri/5/detay">
                       <div class="musteri-listele-table-right-block">
                         <div class="musteri-listele-table-right-bakiye-text">
                           <span>250,00 <i class="fa fa-try"></i></span>
@@ -61,54 +61,7 @@
                     </a>
                   </td>
                 </tr>
-                <tr>
-                  <td class="first-table-cell">
-                    <a href="#">
-                      <div class="musteri-listele-table-left-block">
-                        <div class="musteri-listele-table-left-kisa-ad-block">
-                          <span>AE</span>
-                        </div>
-                        <div class="musteri-listele-table-left-tam-adi">
-                          <span>Ahmet Elçik</span>
-                          <span class="musteri-listele-table-left-telefon-no">(554) 910 98 94</span>
-                        </div>
-                      </div>
-                    </a>
-                  </td>
-                  <td style="text-align: right" class="last-table-cell">
-                    <a href="#">
-                      <div class="musteri-listele-table-right-block">
-                        <div class="musteri-listele-table-right-bakiye-text">
-                          <span>250,00 <i class="fa fa-try"></i></span>
-                        </div>
-                      </div>
-                    </a>
-                  </td>
-                </tr>
-                <tr>
-                  <td class="first-table-cell">
-                    <a href="#">
-                      <div class="musteri-listele-table-left-block">
-                        <div class="musteri-listele-table-left-kisa-ad-block">
-                          <span>AE</span>
-                        </div>
-                        <div class="musteri-listele-table-left-tam-adi">
-                          <span>Ahmet Elçik</span>
-                          <span class="musteri-listele-table-left-telefon-no">(554) 910 98 94</span>
-                        </div>
-                      </div>
-                    </a>
-                  </td>
-                  <td style="text-align: right" class="last-table-cell">
-                    <a href="#">
-                      <div class="musteri-listele-table-right-block">
-                        <div class="musteri-listele-table-right-bakiye-text">
-                          <span>250,00 <i class="fa fa-try"></i></span>
-                        </div>
-                      </div>
-                    </a>
-                  </td>
-                </tr>
+
                 </tbody>
               </table>
             </div>
