--- a/src/app/Panel/panel.component.html
+++ b/src/app/Panel/panel.component.html
@@ -220,16 +220,16 @@
         <div class="panel-footer">
           <!-- Panel Footer Left Block -->
           <div class="panel-footer-left-block">
-            <span>Ekleyen Kullanıcı : <a href="#" class="link-blue-hover">Ahmet Elçik</a></span>
+            <div class="panel-footer-ekleyen-kullanici-block">
+              <span>Ekleyen Kullanıcı : <a href="#" class="link-blue-hover">Ahmet Elçik</a></span>
+            </div>
           </div>
           <!-- Panel Footer Left Block -->
           <!-- Panel Footer Right Block -->
           <div class="panel-footer-right-block">
-            <!--<div class="btn-group" role="group" aria-label="...">-->
-              <!--<button type="button" class="btn btn-default">Left</button>-->
-              <!--<button type="button" class="btn btn-default">Middle</button>-->
-              <!--<button type="button" class="btn btn-default">Right</button>-->
-            <!--</div>-->
+            <div class="panel-footer-olusturulma-tarihi-block">
+              <span>Oluşturulma Tarihi : 12 Aralık 2016 11:30</span>
+            </div>
           </div>
           <!-- Panel Footer Right Block -->
           <div class="clearfix"></div>
