--- a/src/scss/MusteriDetay/musteri-detay.scss
+++ b/src/scss/MusteriDetay/musteri-detay.scss
@@ -4,6 +4,10 @@
     color: #616060;
     font-size: 13px;
   }
+  & p{
+    color: #616060;
+    font-size: 13px;
+  }
 }
 
 .musteri-detay-tel-no{
