--- a/src/app/musteri-detay/musteri-detay.component.html
+++ b/src/app/musteri-detay/musteri-detay.component.html
@@ -158,7 +158,7 @@
             <!-- Diğer Button DropDown -->
             <!-- Ödeme Ekle -->
             <div class="col-md-6">
-              <a href="#" class="btn btn-success-ozel btn-block"><i class="fa fa-sign-in fa-rotate-90"></i> Ödeme Ekle</a>
+              <a routerLink="/odeme/yeni" class="btn btn-success-ozel btn-block"><i class="fa fa-sign-in fa-rotate-90"></i> Ödeme Ekle</a>
             </div>
             <!-- Ödeme Ekle -->
           </div>
