araç listeleme eklendi

--- a/src/app/araclar/araclar.component.html
+++ b/src/app/araclar/araclar.component.html
@@ -1,14 +1,100 @@
-<div class="container-fluid m-l-230">
-  <div class="row">
-    <!-- Sayfa Başlığı -->
-    <div id="sayfa-basligi">
-      <div class="container-fluid m-l-230">
-        <div class="row">
-          <span class="sayfa-basligi-title">Araçlar</span>
-        </div>
+<!-- Sayfa Başlığı -->
+<div id="sayfa-baslik" style="position:relative">
+  <div class="container-fluid m-l-230">
+    <div class="row">
+      <!-- Page Header -->
+      <div class="page-head-title">
+        <h2>Araçlar</h2>
       </div>
+      <!-- Page Header -->
+      <!-- Breadcumb -->
+      <ol class="breadcrumb breadcumb-title">
+        <li><a href="#">Anasayfa</a></li>
+        <li><a href="#">Araçlar</a></li>
+        <li class="active">Listele</li>
+      </ol>
+      <!-- Breadcumb -->
     </div>
-    <!-- Sayfa Başlığı -->
-
   </div>
+</div>
+<!-- Sayfa Başlığı -->
+
+
+<div class="container-fluid m-l-230 m-t-15">
+  <!-- Müşteri Listele Table -->
+  <div class="row">
+    <div class="col-xs-12">
+      <!-- Panel -->
+      <div class="panel panel-light" style="border-radius: 5px">
+        <!-- Panel Body -->
+        <div class="panel-body" style="padding: 0">
+          <div id="arac-listele-body-table-block">
+            <div class="table-responsive">
+              <table class="table">
+                <thead>
+                <th class="arac-listele-table-head-text-first">Araç</th>
+                <th class="arac-listele-table-head-text-last" style="text-align: right">Konumu</th>
+                </thead>
+                <tbody>
+                <tr>
+                  <td class="first-table-cell">
+                    <a href="#">
+                      <div class="arac-listele-table-left-block">
+                        <div class="arac-listele-table-left-icon-block">
+                          <i class="fa fa-car"></i>
+                          <i class="fa fa-circle arac-listele-table-left-icon-durumu arac-durumu-succes"></i>
+                        </div>
+                        <div class="arac-listele-table-left-arac-marka-full">
+                          <span class="arac-listele-table-left-arac-marka-adi-span">Bmw 3 Serisi (Dizel)</span>
+                          <span class="arac-listele-table-left-arac-marka-plaka-span">35 D 8897</span>
+                        </div>
+                      </div>
+                    </a>
+                  </td>
+                  <td style="text-align: right" class="last-table-cell">
+                    <a href="#">
+                      <div class="arac-listele-table-right-block">
+                        <div class="arac-listele-table-right-konum-text">
+                          <span>Denizli Merkez Şube</span>
+                        </div>
+                      </div>
+                    </a>
+                  </td>
+                </tr>
+                <tr>
+                  <td class="first-table-cell">
+                    <a href="#">
+                      <div class="arac-listele-table-left-block">
+                        <div class="arac-listele-table-left-icon-block">
+                          <i class="fa fa-car"></i>
+                          <i class="fa fa-circle arac-listele-table-left-icon-durumu arac-durumu-red"></i>
+                        </div>
+                        <div class="arac-listele-table-left-arac-marka-full">
+                          <span class="arac-listele-table-left-arac-marka-adi-span">Bmw 3 Serisi (Dizel)</span>
+                          <span class="arac-listele-table-left-arac-marka-plaka-span">35 D 8897</span>
+                        </div>
+                      </div>
+                    </a>
+                  </td>
+                  <td style="text-align: right" class="last-table-cell">
+                    <a href="#">
+                      <div class="arac-listele-table-right-block">
+                        <div class="arac-listele-table-right-konum-text">
+                          <span>Denizli Merkez Şube</span>
+                        </div>
+                      </div>
+                    </a>
+                  </td>
+                </tr>
+                </tbody>
+              </table>
+            </div>
+          </div>
+        </div>
+        <!-- Panel Body -->
+      </div>
+      <!-- Panel -->
+    </div>
+  </div>
+  <!-- Müşteri Listele Table -->
 </div>
