--- a/src/app/solmenu/solmenu.component.html
+++ b/src/app/solmenu/solmenu.component.html
@@ -4,13 +4,16 @@
       <li><a routerLink="/anasayfa"><i class="fa fa-home"></i><span>Anasayfa</span></a></li>
       <li><a routerLink="/araclar"><i class="fa fa-car"></i><span>Araçlar</span></a></li>
       <li  class="active"><a routerLink="/musteriler"><i class="fa fa-address-book"></i><span>Müşteriler</span></a></li>
-      <li><a routerLink="/panel"><i class="fa fa-hashtag"></i><span>Panel</span></a></li>
-      <li><a routerLink="/button"><i class="fa fa-hashtag"></i><span>Button</span></a></li>
-      <li><a routerLink="/list"><i class="fa fa-hashtag"></i><span>List</span></a></li>
-      <li><a routerLink="/form"><i class="fa fa-hashtag"></i><span>Form</span></a></li>
-      <li><a routerLink="/tab"><i class="fa fa-hashtag"></i><span>Tab</span></a></li>
+
     </ul>
   </div>
+  <ul class="deeme">
+    <li><a routerLink="/panel"><i class="fa fa-hashtag"></i><span>Panel</span></a></li>
+    <li><a routerLink="/button"><i class="fa fa-hashtag"></i><span>Button</span></a></li>
+    <li><a routerLink="/list"><i class="fa fa-hashtag"></i><span>List</span></a></li>
+    <li><a routerLink="/form"><i class="fa fa-hashtag"></i><span>Form</span></a></li>
+    <li><a routerLink="/tab"><i class="fa fa-hashtag"></i><span>Tab</span></a></li>
+  </ul>
 </div>
 
 
