--- a/src/app/araclar/araclar.component.html
+++ b/src/app/araclar/araclar.component.html
@@ -38,7 +38,7 @@
                 <tbody>
                 <tr>
                   <td class="first-table-cell">
-                    <a href="#">
+                    <a routerLink="/araclar/5/detay">
                       <div class="arac-listele-table-left-block">
                         <div class="arac-listele-table-left-icon-block">
                           <i class="fa fa-car"></i>
@@ -52,7 +52,7 @@
                     </a>
                   </td>
                   <td style="text-align: right" class="last-table-cell">
-                    <a href="#">
+                    <a routerLink="/araclar/5/detay">
                       <div class="arac-listele-table-right-block">
                         <div class="arac-listele-table-right-konum-text">
                           <span>Denizli Merkez Şube</span>
@@ -63,7 +63,7 @@
                 </tr>
                 <tr>
                   <td class="first-table-cell">
-                    <a href="#">
+                    <a routerLink="/araclar/6/detay">
                       <div class="arac-listele-table-left-block">
                         <div class="arac-listele-table-left-icon-block">
                           <i class="fa fa-car"></i>
@@ -77,7 +77,7 @@
                     </a>
                   </td>
                   <td style="text-align: right" class="last-table-cell">
-                    <a href="#">
+                    <a routerLink="/araclar/6/detay">
                       <div class="arac-listele-table-right-block">
                         <div class="arac-listele-table-right-konum-text">
                           <span>Denizli Merkez Şube</span>
